.envでバージョンを指定出来るようにした

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -13,7 +13,7 @@ services:
       - ./volumes/https-portal/data:/var/lib/https-portal
   # API service
   api:
-    image: langgenius/dify-api:0.6.6
+    image: langgenius/dify-api:${DIFY_VERSION}
     restart: always
     environment:
       # Startup mode, 'api' starts the API server.
@@ -179,7 +179,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: langgenius/dify-api:0.6.6
+    image: langgenius/dify-api:${DIFY_VERSION}
     restart: always
     environment:
       # Startup mode, 'worker' starts the Celery worker for processing the queue.
@@ -276,7 +276,7 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:0.6.6
+    image: langgenius/dify-web:${DIFY_VERSION}
     restart: always
     environment:
       # The base URL of console application api server, refers to the Console base URL of WEB service if console domain is
